# blink

./: Anchor.toml  client_config.ini  package-lock.json  package.json
client/: Cargo.toml
client/src/: main.rs
client/src/instructions/: blink_instructions.rs  event_instructions_parse.rs  mod.rs  rpc.rs
programs/blink/: Cargo.toml
programs/blink/src/: error.rs  lib.rs  state.rs
programs/blink/src/instructions/: claim.rs  close.rs  create_config.rs  initialize.rs  mod.rs  submit.rs  time_config.rs
programs/blink/src/utils/: token.rs
tests/: claim.ts.bak  config.ts.bak  createTime.ts.bak  init-claim.ts  initialize.ts  initialize.ts.bak  initialize.ts0812  initialize.ts0813  submit.ts.bak
tests/utils/: index.ts  pda.ts  token.ts  util.ts  values.ts  web3.ts
